--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-boost": "^0.4.9",
     "firebase": "^7.22.0",
     "graphql": "^15.3.0",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
